# sudoblark.terraform.modularised-demo

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: python.md  readme.md  terraform.md
.github/workflows/: apply.yaml  commit-to-pr.yaml  deploy.yaml  destroy.yaml  pull-request.yaml
application/dummy_files/: config.json
application/dummy_uploads/: 20190210.csv  20200212.csv  20200404.csv  20210512.csv  20210612.csv  20211228.csv  20260101.csv  20260102.csv  20260103.csv
application/unzip-lambda/: pyproject.toml
application/unzip-lambda/unzip_lambda/: lambda_function.py
infrastructure/aws-sudoblark-development/: application_registry.tf  athena_workgroups.tf  data.tf  glue_catalog_encryption.tf  glue_crawlers.tf  glue_databases.tf  iam.tf  lambda.tf  main.tf  notifications.tf  outputs.tf  s3.tf  variables.tf
infrastructure/example-account/: additional_s3_files.tf  event_bridge_rule.tf  lambda.tf  main.tf  s3_bucket.tf  s3_bucket_notifications.tf  s3_files.tf  sns.tf  state_machine.tf  variables.tf
infrastructure/sudoblark/: application_registry.tf  lambda.tf  main.tf  s3_bucket.tf  s3_bucket_notifications.tf  s3_files.tf  sns.tf
lambda-packages/parquet-converter/: README.md  lambda_function.py  requirements.txt
lambda-packages/unzip-processor/: README.md  lambda_function.py  requirements.txt
modules/data/: athena_workgroups.tf  buckets.tf  defaults.tf  glue_crawlers.tf  glue_databases.tf  iam_roles.tf  infrastructure.tf  lambdas.tf  (+2 more)
(+48 files in other folders)
